...
                        <outletCollection property="gestureRecognizers" destination="ROR-Tv-zZq" appends="YES" id="46N-7q-kVl"/>
                    </connections>
                </view>
                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="3FW-5F-Y0b" userLabel="HorizontalPhotoControl">
                    <rect key="frame" x="412" y="1321" width="200" height="25"/>
                    <subviews>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8KH-KD-sMe" userLabel="Mail">
                            <rect key="frame" x="0.0" y="0.0" width="47" height="25"/>
                            <accessibility key="accessibilityConfiguration" hint="send e-mail" identifier="Mail"/>
                            <state key="normal" image="enveloppe">
                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            </state>
                            <connections>
                                <action selector="envoiMail:" destination="-1" eventType="touchUpInside" id="fv8-IO-esk"/>
                            </connections>
                        </button>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2eA-f8-oG4">
                            <rect key="frame" x="49" y="0.0" width="47.5" height="25"/>
                            <state key="normal" image="takePicture">
                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            </state>
                            <connections>
                                <action selector="takePicture:" destination="-1" eventType="touchUpInside" id="YFG-tS-aqe"/>
                            </connections>
                        </button>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5K4-UJ-bZL" userLabel="takeAndReview">
                            <rect key="frame" x="98.5" y="0.0" width="47" height="25"/>
                            <state key="normal" image="takeAndPreview"/>
                            <connections>
                                <action selector="takeAndPreview:" destination="-1" eventType="touchUpInside" id="M8p-UU-mvG"/>
                            </connections>
                        </button>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gmu-Kf-Yq0" userLabel="Settings">
                            <rect key="frame" x="147.5" y="0.0" width="52.5" height="25"/>
                            <accessibility key="accessibilityConfiguration" label="Settings"/>
                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <state key="normal" image="Settings">
                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            </state>
...
                                <color key="titleColor" red="1" green="0.56323386659999997" blue="0.061179050659999998" alpha="1" colorSpace="calibratedRGB"/>
                            </state>
                            <connections>
                                <outletCollection property="gestureRecognizers" destination="aKo-K6-EEJ" appends="YES" id="5i5-e1-RU2"/>
                            </connections>
                        </button>
                        <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="center" horizontalHuggingPriority="751" horizontalCompressionResistancePriority="500" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="Titre" textAlignment="center" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="RmI-U2-qs1" user
                            <rect key="frame" x="243" y="0.0" width="552" height="38"/>
                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            <accessibility key="accessibilityConfiguration" identifier="Titre"/>
                            <color key="textColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                            <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="URL" keyboardAppearance="alert" returnKeyType="done"/>
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
                                    <color key="value" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </userDefinedRuntimeAttribute>
                            </userDefinedRuntimeAttributes>
                        </textField>
                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" placeholderIntrinsicWidth="16" placeholderIntrinsicHeight="38" text="#1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kpM-Ht-
                            <rect key="frame" x="803" y="0.0" width="16" height="38"/>
                            <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                            <accessibility key="accessibilityConfiguration" identifier="NoPhoto"/>
                            <fontDescription key="fontDescription" type="system" weight="thin" pointSize="15"/>
                            <color key="textColor" cocoaTouchSystemColor="lightTextColor"/>
                            <color key="highlightedColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
...
